# i3-balance-workspace

./: .gitignore  Makefile  PKGBUILD  README.md  aur-release  aur-release.sh  i3_balance_workspace.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: develop.md  develop.org  todos.md  todos.org
hooks/: pre-commit  pre-commit.sample
i3_balance_workspace/: __init__.py  i3_balance_workspace.py  utils.py
src/i3_balance_workspace/: i3_balance_workspace.py  utils.py
