[tool.poetry]
name = "i3-balance-workspace"
version = "1.8.6"
readme = "README.md"
description = "Balance windows and workspaces in i3wm"
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]
repository = "https://github.com/atreyasha/i3-balance-workspace"
license = "MIT"
packages = [{ include = "i3_balance_workspace" }]

[tool.poetry.dependencies]
python = ">=3.5"
i3ipc = ">=2.2.1"

[tool.poetry.dev-dependencies]
mypy = "0.910"

[tool.poetry.scripts]
i3_balance_workspace = "i3_balance_workspace.i3_balance_workspace:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
allow_redefinition = true
files = "i3_balance_workspace"

[[tool.mypy.overrides]]
module = [
    "i3ipc"
]
ignore_missing_imports = true
